Fix - carousel misalignment Corrected wrong value on grid-row in .nav__carousel--bottom-hidden that caused issue

--- a/components/navbar/navbar.css
+++ b/components/navbar/navbar.css
@@ -66,7 +66,7 @@ nav {
 }
 
 .nav__carousel--bottom-hidden {
-  grid-row: -1;
+  grid-row: -2;
   visibility: hidden;
 }
 
